# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-10-16  Michael Jahn
	* eXtreme Movie Manager import plugin added
	* import support for movie detail video codec

2009-10-13  Michael Jahn
	* support for posters for import plugins GCstar and AMC
	* [#410362] AMC importer doesn't import cover pictures

2009-10-07  Michael Jahn
	* DVD Profiler import plugin added
	* very small update for AMC import plugin (medium typ)
	* import base class: support for looking up medium types and adding tags,
	  barcode, cameraman, screenplay
	* import stabilized with try-except and error message box

2009-09-30  Piotr Ożarowski
	* Change log format

2009-09-29  Michael Jahn
	* GCstar import plugin added

2009-09-26  Piotr Ożarowski
	* Display popup message during database upgrades

2009-09-25  Michael Jahn
	* Amazon movie plugin updated

2009-09-14  Piotr Ożarowski
	* Add "Remover" extension (removes selected movies)

2009-09-02  Michael Jahn
	* [#336855] Error being reported saving posters
	  cleanup of generating thumbnail versions of the images
	  and filenames for default image/thumbnail

2009-08-28  Piotr Ożarowski
	* [Bug 420462] --clean fixed

2009-08-26  Michael Jahn
	* [#418911] It doesn't import cover art from FilmAffinity

2009-08-20  Piotr Ożarowski
	* Add pool_recycle parameter in config file and set the default to 1 hour
	  (SQLAlchemy will recycle MySQL connections after given number of seconds
	  of inactivity - fixes "MySQL server has gone away" issue)

2009-08-18  Piotr Ożarowski
	* Fix update_movie() to actually load the image

2009-08-13  Piotr Ożarowski
	* Add 'Mark as seen' extension
	* Allow PNG images to be used as toolbar icons by extensions
	* gutils.question now returns True or False

2009-08-12  Piotr Ożarowski
	* Remove Amazon stuff from preferences window
	* Region 2 and 4 names shorten (to fit in preferences window)
	* Show tabs on the left side of preferences window